workflow.cs
ldap
$ALTER_HERE, queries
more spellchecking...
search and full text search.
blog about lucene.net


-----------------------------------------------------------------------
Version 2.9.98   11/XX/2008 
-----------------------------------------------------------------------

* Fixed bug where the display of the popup was truncated if the window
was scrolled down from the top.

* relationships in print?
* change history in print?
* images in print?

-----------------------------------------------------------------------
Version 2.9.8   10/25/2008 
-----------------------------------------------------------------------

* Fixed "get notifications", "stop notifications" link.  It was
broken in version 2.9.7.

* Fixed bug related to receiving emails with Cc addresses.

* Fixed bug with flickering of popup when bug description was
multiple lines.   Fixed javascript bug when popup would be displaying
below the bottom edge of the screen.

* Fixed bug with search and custom dropdowns where one of the dropdown
values is blank.  You can now search for bugs where the custom dropdown
value has not been specified.  This only completely works on newly
inserted bugs.  To make the fix retroactive, run sql like this:
update bugs set [YOUR COLUMN] = N'' where [YOUR COLUMN] is null

* Fixed bug with flickering of "suggest" feature, the green dropdown
that appears when you are typing a bug description to search for on
search.aspx.

* When you enter the pipe-delimited values for custom dropdown, it's 
now ok to use line breaks to format what you entered to be more readable
for the admin.

* Added Web.config setting "DisplayAnotherButtonInEditBugPage" which
causes a second Update button to appear on the edit_bug.aspx, at the
top of the form, so you don't have to scroll down to find the button if
you have a lot of custom fields.

* Added a Web.config setting "SubversionAdditionalArgs".  These are
appended to every command BugTracker.NET sends to Subversion.  Use this