@@ -48,6 +48,15 @@ Version 2.9.98   11/XX/2008
 * Fixed bug where the display of the popup was truncated if the window
 was scrolled down from the top.
 
+* Catching exception "Request is not available in this context" when
+Application_Start references the Request object on IIS7 in "Integrated"
+mode.  Google the message for more info.
+
+* If "DisplayAnotherButtonInEditBugPage" is set to 1, the error message
+is also duplicated at the top of the form.
+
+* Fixed cosmetic bug with form border in IE.
+
 * relationships in print?
 * change history in print?
 * images in print?
